[package]
name = "psp22"
version = "0.2.1"
edition = "2021"
authors = ["Cardinal"]
homepage = "https://github.com/Cardinal-Cryptography/PSP22"
repository = "https://github.com/Cardinal-Cryptography/PSP22"
license = "Apache-2.0"
readme = "README.md"
description = "Minimal implementation of PSP22 token standard in pure ink!"
exclude = [ ".github/*" ]

[dependencies]
cfg-if = { version = "1.0" }
ink = { version = "4.3", default-features = false }
prusti-contracts = { path = "/Users/zgrannan/prusti-dev/prusti-contracts/prusti-contracts" }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.9", default-features = false, features = ["derive"], optional = true }

[lib]
path = "lib.rs"

[features]
default = [
    "std",
    # "resource"
]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]
resource = []
contract = []
ink-as-dependency = []
